<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/GPA_Calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:text="@string/gpa_calculator"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:onClick="onClick"
            android:text="@string/compute_gpa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry5" />

        <TextView
            android:id="@+id/showGPA"
            android:layout_width="372dp"
            android:layout_height="62dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate" />

        <EditText
            android:id="@+id/entry1"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/gray"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GPA_Calculator"
            android:autofillHints="Grade 1" />

        <TextView
            android:id="@+id/GPA4"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="14dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:labelFor="@id/entry4"
            android:text="@string/gpa_4"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/entry4"
            app:layout_constraintTop_toBottomOf="@+id/GPA3" />

        <TextView
            android:id="@+id/GPA2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="14dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:labelFor="@id/entry2"
            android:text="@string/gpa_2"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/entry2"
            app:layout_constraintTop_toBottomOf="@+id/GPA1" />

        <TextView
            android:id="@+id/GPA1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="14dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:labelFor="@id/entry1"
            android:text="@string/gpa_1"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/entry1"
            app:layout_constraintTop_toBottomOf="@+id/GPA_Calculator" />

        <TextView
            android:id="@+id/GPA3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="14dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:labelFor="@id/entry3"
            android:text="@string/gpa_3"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/entry3"
            app:layout_constraintTop_toBottomOf="@+id/GPA2" />

        <EditText
            android:id="@+id/entry3"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/gray"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry2"
            android:autofillHints="Grade 3" />

        <EditText
            android:id="@+id/entry4"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/gray"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry3"
            android:autofillHints="Grade 3" />

        <EditText
            android:id="@+id/entry2"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/gray"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry1"
            android:autofillHints="Grade 2" />

        <EditText
            android:id="@+id/entry5"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/gray"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry4"
            android:autofillHints="Grade 5"/>

        <TextView
            android:id="@+id/GPA5"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="14dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:labelFor="@id/entry5"
            android:text="@string/gpa_5"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/entry5"
            app:layout_constraintTop_toBottomOf="@+id/GPA4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>